# wtchat

./: README.md  build_debug.sh  build_release.sh  meson.build  meson_options.txt
css/: .style.css.un~  style.css
src/: ChatApp.cpp  ChatApp.h  ChatLine.cpp  ChatLine.h  ChatWidget.cpp  ChatWidget.h  State.cpp  State.h  config.h.in  main.cpp  utils.cpp  utils.h
templates/: messages.xml  messages_ru.xml
